# AoC22

./: Cargo.toml  LICENSE  README.md
inputs/: day05.txt
src/: priority_queue.rs
