[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"
authors = ["Arthur Pastel <arthur.pastel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.2"
itertools = "0.10.5"
num-bigint = "0.4"
parse-display = "0.7.0"
petgraph = "0.6.2"
rayon = "1.6.1"

[lib]
name = "priority_queue"
path = "src/priority_queue.rs"
